# RiseAndFall---launcher

./: .gitignore  README.md  config.json  pyproject.toml  pyrightconfig.json
.github/workflows/: build-dev.yml  build-main.yml  build.yml
src/: config.py  main.py
src/callbacks/: __init__.py  connect_to_zt.py  game_dir_action.py  game_installer.py  game_open_dgvoodoo.py  game_runner.py  install_game_action.py  launcher_copy_ip.py  launcher_update_actions.py  list_delete_player.py  list_save_player.py  list_send_saves.py  open_setting_dgvoodoo.py  run_game_action.py  run_game_button.py  se_connect.py  server_transfer_logic.py  transfer_logic.py  zt_connect.py
src/callbacks/game_mods/: __init__.py  install_mods.py
src/callbacks/mods/: __init__.py  mods_actions.py
src/callbacks/player_list/: __init__.py  plist_actions.py  plist_copy_ip.py  plist_delete_player.py  (+3 more)
src/ui/: __init__.py  header.py  launcher_header.py  launcher_pages.py  main_content.py  main_menu.py  main_menu_render.py  mods_content.py  mods_render.py  page_main.py  page_mods.py  page_settings.py  players_list.py  players_list_content.py  players_list_render.py  settings_render.py  ui_admin_check.py  ui_modal_base.py  ui_player_list.py  ui_toast.py  ui_update_toast.py  update_modal_toast.py  utils_render.py  views.py
src/utils/: __init__.py  config_manager.py  daily_saves_archive.py  file_server.py  game_daily_saves.py  game_set_directory.py  get_short_path.py  get_zt_path.py  install_zt.py  launcher_config_manager.py  launcher_player_manager.py  launcher_toast.py  launcher_update_checker.py  network_scanner.py  notifications.py  player_manager.py  run_game.py  se_get_path.py  se_install.py  se_run_command.py  update_checker.py  user_config.py  web_server.py  zt_install.py
test/: test_launcher_server.py
(+15 files in other folders)
