[project]
name = "raf-launcher"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dearpygui>=2.2",
    "fastapi>=0.135.1",
    "python-multipart>=0.0.22",
    "requests>=2.32.5",
    "uvicorn>=0.42.0",
]

[project.scripts]
start = "main:main"

[tool.uv]
package = true

[tool.basedpyright]
typeCheckingMode = "basic"

reportMissingTypeStubs = false

reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportAny = false

reportUnusedExpression = false
