[project]
name = "Raf-launcher"
version = "0.1.11"
description = "Author: kotop21"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dearpygui>=2.2",
    "requests>=2.32.5",
]

[project.scripts]
start = "main:main"

[tool.uv]
package = true

[tool.basedpyright]
typeCheckingMode = "basic"

reportMissingTypeStubs = false

reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportAny = false

reportUnusedExpression = false
